# CMakeTemplate

./: README.md
src/: CMakeLists.txt  main.cpp
src/dynamicLib/: CMakeLists.txt  dynamicLib.cpp  dynamicLib.hpp
src/staticLib/: CMakeLists.txt  staticLib.cpp  staticLib.hpp
